--- a/static/css/place_home.css
+++ b/static/css/place_home.css
@@ -106,7 +106,7 @@
   border-radius: 10px 10px 0 0;
 }
 
-.content-box__img img{
+.content-box__img img {
   width: 22rem;
   height: 10rem;
   overflow: hidden;
@@ -114,7 +114,7 @@
   border-radius: 10px 10px 0 0;
 }
 
-.content-box__name{
+.content-box__name {
   font-weight: 700;
   font-size: 1.25rem;
   line-height: 18px;
@@ -144,4 +144,31 @@
 
 .content-box__bottom span i {
   margin-right: 0.5rem;
+}
+
+.star-ratings {
+  color: #aaa9a9;
+  position: relative;
+  unicode-bidi: bidi-override;
+  width: max-content;
+  -webkit-text-fill-color: transparent; /* Will override color (regardless of order) */
+  -webkit-text-stroke-width: 1.3px;
+  -webkit-text-stroke-color: #2b2a29;
+}
+
+.star-ratings-fill {
+  color: #fff58c;
+  padding: 0;
+  position: absolute;
+  z-index: 1;
+  display: flex;
+  top: 10px;
+  left: 0;
+  overflow: hidden;
+  -webkit-text-fill-color: gold;
+}
+
+.star-ratings-base {
+  z-index: 0;
+  padding: 0;
 }
