--- a/place/templates/place/detail.html
+++ b/place/templates/place/detail.html
@@ -71,6 +71,10 @@
           <div>{{place.opening_time}}~{{place.closing_time}}</div>
           <div>{{place.get_wifi_display}}</div>
           <div>{{place.get_power_socket_display}}</div>
+          <div>{{place.rating}}</div>
+          <div>{{place.location}} {{place.location_detail}}</div>
+        </div>
+
           <div><div class="star-ratings">
             <div 
               class="star-ratings-fill"
@@ -79,6 +83,48 @@
               <span id="star">★</span>
               {% endfor %}
             </div>
+          </div>      
+        </div>
+        <hr style= "color: #BCBCBC; height:1px; width: 100%; opacity: 1;">
+        <div class="content-item">
+          <div class="content-item__title">후기</div>
+          <div class="content-item__content">{{place.content | safe }}</div>
+        </div>
+        <hr style= "color: #BCBCBC; height:1px; width: 100%; opacity: 1;">
+        <div class="content-item" style= "width:1180px;">
+          <div class="content-item__title">지도</div>
+          <div id="map" style="height:400px; margin: 1.5rem 0;"></div>
+        </div>
+    
+        <div id="main_detail__comment">
+          <div id="main_detail__comment__top">
+            <div id="main_detail__comment__blank">
+              <h2>댓글</h2>
+              <h2 id="main_detail__comment_num">{{comments_len}}</h2>
+            </div>
+            <div id="main_detail__comment__rule">
+              <span>300자 이내 작성</span>
+            </div>
+          </div>
+          <div id="main_detail__comment__blank_box">
+            <form action="{% url 'comments:write-place' place.id %}" method="post">
+              {% csrf_token %}
+              <textarea
+                type="text"
+                name="content"
+                id="comment_input_box"
+                cols="30"
+                rows="10"
+                placeholder="댓글을 입력해주세요."
+              ></textarea>
+              <div id="main_detail__comment__btnplace">
+                <input
+                  type="submit"
+                  id="main_detail__comment__btn"
+                  value="댓글쓰기"
+                />
+              </div>
+    
           </div></div>
           <div>{{place.location}} {{place.location_detail}}</div>
 </div>
