--- a/static/css/place_detail.css
+++ b/static/css/place_detail.css
@@ -1,6 +1,6 @@
 @import url(base.css);
 
-.wrap-vertical {
+.wrap-vertical{
   display: flex;
   align-items: center;
   flex-direction: row;
@@ -24,48 +24,47 @@
   object-position: center;
 }
 
-.dropdown {
+.dropdown{
   position: relative;
   display: inline-block;
 }
 
-#drop-content {
+#drop-content{
   position: absolute;
   background-color: white;
-  box-shadow: 0px 3px 6px -4px rgba(0, 0, 0, 0.12),
-    0px 6px 16px rgba(0, 0, 0, 0.08), 0px 9px 28px 8px rgba(0, 0, 0, 0.05);
+  box-shadow: 0px 3px 6px -4px rgba(0, 0, 0, 0.12), 0px 6px 16px rgba(0, 0, 0, 0.08), 0px 9px 28px 8px rgba(0, 0, 0, 0.05);
   border-radius: 2px;
   border: none;
 }
 
-#drop-content li:nth-child(3) {
+#drop-content li:nth-child(3){
   text-decoration: none;
   padding: 1rem;
 }
 
-.option:hover {
+.option:hover{
   color: #2253ff !important;
 }
 
-#drop-content li:hover {
+#drop-content li:hover{
   color: #2253ff !important;
   background-color: #e9f7ff;
 }
 
-#drop-content .option_blank {
+#drop-content .option_blank{
   margin: 0 1rem;
   padding: 0 1rem;
 }
 
-#drop-content button {
+#drop-content button { 
   padding: 1rem;
 }
 
-.option > form > button:hover {
+.option > form > button:hover{
   color: #2253ff !important;
 }
 
-.option > a:hover {
+.option > a:hover{
   color: #2253ff !important;
 }
 
@@ -73,10 +72,10 @@
   display: flex;
   align-items: center;
   width: 100%;
-  border-bottom: 1px solid #bfbfbf;
+  border-bottom: 1px solid #BFBFBF;
 }
 
-.content-right {
+.content-right{
   display: flex;
 }
 
@@ -104,15 +103,15 @@
 
 .content-title__bar {
   margin: 0 1rem;
-  color: #8c8c8c;
+  color: #8C8C8C;
 }
 
 .content-title__published {
-  color: #8c8c8c;
+  color: #8C8C8C;
 }
 
 .content-item {
-  font-family: "Noto Sans KR", sans-serif;
+  font-family: 'Noto Sans KR', sans-serif;
   font-weight: 500;
   font-size: 1.25rem;
   margin-right: auto;
@@ -133,13 +132,13 @@
   margin-right: auto;
 }
 
-.content-item__left {
+.content-item__left{
   font-weight: 600;
   color: black;
   margin-right: 4rem;
 }
 
-.content-item__right {
+.content-item__right{
   margin-right: auto;
 }
 
@@ -161,20 +160,20 @@
   align-items: center;
 }
 
-#main_detail__top__like {
+#main_detail__top__like{
   margin-right: 1rem;
   padding: 0.75rem 1rem;
   background-color: white;
   border-radius: 20%;
-  border: 1px solid #8c8c8c;
+  border: 1px solid #8C8C8C;
 }
 
-#main_detail__top__like i:hover {
+#main_detail__top__like i:hover{
   color: #ff1d2f;
 }
 
 #main_detail__top__like .fa-regular {
-  color: #8c8c8c;
+  color: #8C8C8C;
 }
 
 #main_detail__top__like .fa-solid {
@@ -272,7 +271,27 @@
   font-size: 14px;
 }
 
-<<<<<<< HEAD
+/* 프로필 사진 */
+
+.content-title__img .profile_img {
+  width: 2.5rem;
+  height: 2.5rem;
+  margin-right: 0.5rem;
+}
+
+.profile_img img {
+  display: inline-block;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 80%;
+}
+
+.content-box__profile {
+  display: flex;
+  align-items: center;
+}
+
 /* 별점 */
 .star-ratings {
   color: #aaa9a9;
@@ -298,25 +317,4 @@
 .star-ratings-base {
   z-index: 0;
   padding: 0;
-=======
-/* 프로필 사진 */
-
-.content-title__img .profile_img {
-  width: 2.5rem;
-  height: 2.5rem;
-  margin-right: 0.5rem;
-}
-
-.profile_img img {
-  display: inline-block;
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-  border-radius: 80%;
-}
-
-.content-box__profile {
-  display: flex;
-  align-items: center;
->>>>>>> place_templates
 }
