[style] 대체 이미지, place 페이지네이션, 레벨 etc

--- a/notice/templates/notice/write.html
+++ b/notice/templates/notice/write.html
@@ -17,7 +17,7 @@
       <textarea name="content" cols="40" rows="10" required="" id="id_content"></textarea>
     </div>
     <div id="main_write__content__btn">
-      <button type="submit" id="main_write__content__btn_cancel">
+      <button type="submit" id="main_write__content__btn_cancel" onclick="location.href='/notice/'">
         <h3>취소</h3>
       </button>
       <input
