--- a/notice/templates/notice/detail.html
+++ b/notice/templates/notice/detail.html
@@ -1,4 +1,5 @@
 {% extends 'notice/base.html' %}
+{% load static %}
 {% block content %}
 <div class="content">
   <li class="back"><a target="_self" href="{% url 'notice:home' %}"><i class="fa-solid fa-arrow-left"></i></a></li>
@@ -9,11 +10,13 @@
       </div>
       <div class="content-title__bottom">
         <div class="content-title__info">
-          {% if notice.user.profile_img %}
-          <img src="{{notice.user.profile_img.url}}" width="50" alt="">
-          {% else %}
-          <img src="static/img/moco_symbol.png" width="50" alt="">
-          {% endif %}
+          <span class="content-title__img">
+            {% if user.profile_img %}
+              <div class="profile_img"><img src="{{user.profile_img.url}}" alt="profile_img"></img></div>
+              {% else %}
+              <div class="profile_img"><img src="{% static "img/moco_symbol.png" %}" alt="profile_img"></img></div>
+              {% endif %}
+          </span>
           <div class="content-title__left">
             <span class="content-title__user">{{notice.user}}</span>
             <span style="margin: 0 0.5rem; color: #8C8C8C;">|</span>
