--- a/static/css/base.css
+++ b/static/css/base.css
@@ -20,7 +20,7 @@ body {
 }
 
 .wrap {
-  box-shadow: 0px 4px 10px rgba(171, 186, 189, 0.15);
+  box-shadow: 0px 4px 10px rgba(145, 158, 160, 0.15);
   background-color: white;
   position: fixed;
   top: 0;
@@ -34,13 +34,13 @@ body {
   font-family: "Noto Sans", sans-serif;
   font-family: "Noto Sans KR", sans-serif;
   font-weight: 600;
-  font-size: 1rem;
+  font-size: 1.1rem;
   align-items: center;
   z-index: 1;
   max-width: 1200px;
   min-width: 1200px;
   width: 100%;
-  height: 65px;
+  padding: 0.8rem 0;
   margin: 0 auto;
   display: flex;
   justify-content: flex-start;
@@ -49,7 +49,7 @@ body {
 
 .navbar__logo {
   display: inline-flex;
-  width: 100px;
+  width: 110px;
 }
 
 .navbar__logo img {
@@ -61,7 +61,7 @@ body {
   flex-direction: row;
   align-items: center;
   height: 100%;
-  gap: 2.5rem;
+  gap: 3rem;
   margin-left: 2rem;
 }
 
@@ -69,10 +69,12 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 2rem;
+  gap: 2.5rem;
   margin-left: auto;
   height: 100%;
   justify-content: flex-end;
+  font-weight: 500;
+  font-size: 1rem;
 }
 
 .navbar__shortcut i {
@@ -89,6 +91,7 @@ body {
   width: 100%;
   padding: 0 10px 0 10px;
   margin: 3rem auto;
+  z-index: 0;
 }
 
 /* JS 없이 호버로 드롭다운 구현 */
