--- a/static/css/notice_detail.css
+++ b/static/css/notice_detail.css
@@ -33,6 +33,7 @@
 .content-title__bottom {
   display: flex;
   justify-content: space-between;
+  margin: 0 0 2rem 0;
 }
 
 .content-title__info {
@@ -76,4 +77,58 @@
 #drop-content .option_blank{
   margin: 0 1rem;
   padding: 0 1rem;
+}
+
+#drop-content{
+  position: absolute;
+  background-color: white;
+  box-shadow: 0px 3px 6px -4px rgba(0, 0, 0, 0.12), 0px 6px 16px rgba(0, 0, 0, 0.08), 0px 9px 28px 8px rgba(0, 0, 0, 0.05);
+  border-radius: 2px;
+  border: none;
+}
+
+#drop-content li:nth-child(3){
+  text-decoration: none;
+  padding: 1rem;
+}
+
+.option:hover{
+  color: #2253ff !important;
+}
+
+#drop-content li:hover{
+  color: #2253ff !important;
+  background-color: #e9f7ff;
+}
+
+#drop-content .option_blank{
+  margin: 0 1rem;
+  padding: 0 1rem;
+}
+
+.option > form > button:hover{
+  color: #2253ff !important;
+}
+
+.option > a:hover{
+  color: #2253ff !important;
+}
+
+.content-title__img .profile_img {
+  width: 2.5rem;
+  height: 2.5rem;
+  margin-right: 0.5rem;
+}
+
+.profile_img img {
+  display: inline-block;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 80%;
+}
+
+.content-box__profile {
+  display: flex;
+  align-items: center;
 }
