--- a/static/css/profile_view.css
+++ b/static/css/profile_view.css
@@ -18,9 +18,14 @@
 
 .profile-top__edit a {
   border: 1px solid #8C8C8C;
-  border-radius: 0.75rem;
-  padding: 0.5rem 2rem;
-  font-size: 1.1rem;
+  border-radius: 0.5rem;
+  padding: 0.75rem 2rem;
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+.profile-top__edit a:hover{
+  background-color: #FAFAFA;
 }
 
 .profile-top__left img {
@@ -28,7 +33,8 @@
   border-radius: 50%;
   box-shadow: 0 0 8px rgb(0 0 0 / 9%);
   object-fit: cover;
-  width: 10rem; 
+  width: 10rem;
+  height: 10rem; 
 }
 
 .profile-top__right {
@@ -75,7 +81,7 @@
 }
 
 .profile-top__info__list span:nth-child(1) {
-  margin-right: 3rem;
+  margin-right: 5rem;
   font-weight: 700;
 }
 
@@ -107,16 +113,18 @@
   margin-right: 1rem;
 }
 
-.profile-bottom__post p:nth-child(2), .profile-bottom__review__title {
+.profile-bottom__post .profile-bottom__item > p, .profile-bottom__review__title {
   color: black;
-  font-size: 1.2rem;
-  font-weight: 700;
   margin: 0.75rem 0 1rem 0;
+  font-weight: 600;
+  font-size: 1.2rem;
 }
 
 .profile-bottom__post__content {
   margin-bottom: 1rem;
   line-height: 1.5rem;
+  font-weight: 400;
+  font-size: 1rem;
 }
 
 .profile-bottom__post__icon {
@@ -232,4 +240,43 @@
 .profile-bottom__post:hover, .profile-bottom__place:hover, .profile-bottom__review:hover {
   border: 1px solid #2253FF;
   transition: all .2s;
+}
+
+.star-ratings {
+  color: #aaa9a9;
+  position: relative;
+  unicode-bidi: bidi-override;
+  width: max-content;
+  -webkit-text-fill-color: transparent; /* Will override color (regardless of order) */
+  -webkit-text-stroke-width: 1.3px;
+  -webkit-text-stroke-color: #2b2a29;
+  z-index: 0;
+}
+
+.star-ratings-fill {
+  color: #fff58c;
+  padding: 0;
+  position: absolute;
+  z-index: 1;
+  display: flex;
+  top: 10px;
+  left: 0;
+  overflow: hidden;
+  -webkit-text-fill-color: gold;
+  -webkit-text-stroke-color: gold;
+}
+
+.star-ratings-fill > span{
+  padding: 0 0.08rem;
+}
+
+.star-ratings-base {
+  z-index: 0;
+  padding: 0;
+}
+
+/* 레벨 */
+.profile-top__level__left {
+  font-weight: 700;
+  font-size: 1.25rem;
 }
